# adversarial_reinforcement_learning_naval_warfare

./: .gitignore  pyproject.toml
configs/: cmano_cat_and_mouse.yaml
docs/superpowers/specs/: 2026-03-31-streamlit-ui-design.md
scripts/: train_cmano.py
src/naval_rl/bridge/: client.py  cmano_bridge.lua  coord_transform.py  ipc.py
src/naval_rl/envs/: cmano_env.py
